<resources>
    <string name="app_name">Markulator</string>
    <string name="action_settings">Settings</string>
    <string name="how_to_use">How to use</string>
    <string name="summary">Summary</string>
    <string name="add_student">Add Student</string>
    <string name="student">Student #</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="student_number">Student Number</string>
    <string name="average_lab_mark_out_of_30">Average lab mark out of 30:</string>
    <string name="average_midterm_mark_out_of_30">Average midterm mark out of 30:</string>
    <string name="average_final_exam_mark_out_of_40">Average final exam mark out of 40:</string>
    <string name="average_overall_mark">Average overall mark:</string>
    <string name="delete_all_record">Delete All Record</string>
</resources>
