<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/summary" android:textSize="18.0sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_lab_mark_out_of_30"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/averageLabMark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_midterm_mark_out_of_30"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/averageMidtermMark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_final_exam_mark_out_of_40"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/averageFinalExamMark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_overall_mark"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/averageOverallMark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <Button
                android:id="@+id/deleteAllRecordButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete_all_record" />


    </LinearLayout>


</ScrollView>