<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:paddingLeft="16dp" android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/student_number"
            android:paddingTop="30dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/studentNumber"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:paddingTop="30dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:inputType="textPersonName|textCapSentences" />

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:paddingTop="30dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:inputType="textPersonName|textCapSentences" />
    </LinearLayout>
</ScrollView>